<resources>
    <string name="app_name" translatable="false">Vedroid Kt</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="btn_next">Next</string>
    <string name="btn_introduce_yourself">Introduce yourself</string>
    <string name="btn_register">Register</string>

    <string name="et_enter_name">Enter name…</string>

    <string name="toggle_man">Man</string>
    <string name="toggle_not_defined">Not defined</string>
    <string name="toggle_woman">Woman</string>

    <string name="text_no_data">No data</string>
</resources>