<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/main"
    tools:context=".ReturningActivity">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:checkedButton="@id/btn_not_defined"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/btn_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_man"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/btn_not_defined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_not_defined"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/btn_woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_woman"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tied_name"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal"

        android:hint="@string/et_enter_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toggle_button"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_to_start"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal"

        style="?attr/materialButtonStyle"
        android:text="@string/btn_register"

        app:layout_constraintTop_toBottomOf="@+id/toggle_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>